--- a/un-vistazo-al-sistema-de-pensiones-en-mexico.html
+++ b/un-vistazo-al-sistema-de-pensiones-en-mexico.html
@@ -9,7 +9,15 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-177512668-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'UA-177512668-1');
+</script>
 
 <title>un-vistazo-al-sistema-de-pensiones-en-mexico.utf8</title>
 
